Corregir un metodo en searchAllUsers